--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,9 @@ legend,
 .mt5 {
   margin-top: .5rem;
 }
+.mt6 {
+  margin-top: .6rem;
+}
 .mt7 {
   margin-top: .7rem;
 }
@@ -1730,6 +1733,18 @@ button {
   font-weight: 700;
   &.center {
     text-align: center;
+  }
+  &.fz12 {
+    font-size: 1.2rem;
+  }
+  &.fz13 {
+    font-size: 1.3rem;
+  }
+  &.fw400 {
+    font-weight: 400;
+  }
+  &.fw500 {
+    font-weight: 400;
   }
 }
 .text-type5 { 
@@ -4144,6 +4159,41 @@ body.popup-open::before {
   }
 
 }
+.list-type7-wrap { 
+  height: calc(100vh - 257px);
+}
+.list-type7 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
+  gap: 30px;
+  & li {
+    cursor: pointer;
+    &:hover {
+      & .img-wrap {
+        border: 1px solid var(--blue00);
+        /* width: 96px;
+        height: 96px; */
+      }
+      & .text-type4 {
+        font-weight: 700;
+      }
+    }
+    & .img-wrap {
+      width: 70px;
+      height: 70px;
+      border: 1px solid var(--grayeb);
+      border-radius: 100%;
+      margin: 0 auto;
+      transition: all .3s;
+      & img {
+        width: 45%;
+        margin: 0 auto;
+      }
+    }
+    
+  }
+}
 
 
 .alert-type1 {
@@ -4339,10 +4389,14 @@ input[type="number"]::-webkit-inner-spin-button {
 }
  
 .card-main {
+  position: relative;
   display: block;
   background-color: var(--white);
   border-radius: 10px;
   box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.10);
+  &.active {
+    display: none;
+  }
   &.text-center {
     text-align: center;
   }
@@ -4371,8 +4425,25 @@ input[type="number"]::-webkit-inner-spin-button {
         background: url(../images/ico_arrow_right.svg);
       }
     }
+
+  }
+  & .profile {
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    transform: translateY(-50%);
+    width: 79px;
+    height: 79px;
+    border-radius: 100%;
+    overflow: hidden;
+    & img {
+      display: block;
+      object-fit: cover;
+      
+    }
   }
 }
+
 .vehicle-management {
   position: relative;
   & .select {
