--- a/css/style.css
+++ b/css/style.css
@@ -659,12 +659,12 @@ legend,
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  padding: 20px 1.8rem .9rem 1.8rem;
+  padding: 40px 1.8rem .9rem 1.8rem;
   background: var(--white);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5.4rem;
+  /* height: 5.4rem; */
 }
 .header .h1 .logo {
   display: block;
